--- a/.gitignore
+++ b/.gitignore
@@ -1,125 +1,52 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-*.db 
-# C extensions
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
 *.so
+*.dylib
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Go workspace file
+go.work
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Go modules
+go.mod
+go.sum
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+# Dependency directories (remove the comment below if you use vendoring)
+vendor/
 
-# Translations
-*.mo
-*.pot
+# IDE/editor specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+*.swn
 
-# Django stuff:
+# Logs
 *.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
 
-# Flask stuff:
-instance/
-.webassets-cache
+# Temporary files
+*.tmp
+*.temp
 
-# Scrapy stuff:
-.scrapy
+# Build directories
+bin/
+build/
+dist/
 
-# Sphinx documentation
-docs/_build/
-docsrc/_build/
+# OS-specific files
+.DS_Store
+Thumbs.db
 
-# PyBuilder
-target/
+# Coverage reports
+coverage.out
+*.coverprofile
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# Test binaries
+*.test
 
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyderworkspace
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
+# Go build cache
+*.cache
