--- a/.air.toml
+++ b/.air.toml
@@ -4,12 +4,12 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "tmp\\main.exe"
-  cmd = "templ generate ; go build -o ./tmp/main.exe ."
+  bin = "./tmp/main"
+  cmd = "templ generate && go build -o ./tmp/main ."
   delay = 2000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
-  exclude_regex = ["_test.go"]
+  exclude_regex = ["_test.go",".templ"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
@@ -23,7 +23,7 @@ tmp_dir = "tmp"
   post_cmd = []
   pre_cmd = []
   rerun = false
-  rerun_delay = 1000
+  rerun_delay = 500
   send_interrupt = false
   stop_on_error = false
 
